--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
     <title>Document</title>
     <script src="app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <ul>
+      <li>Item1</li>
+      <li>Item2</li>
+      <li>Item3</li>
+      <li>Item4</li>
+    </ul>
+  </body>
 </html>
